[gd_scene load_steps=2 format=3 uid="uid://drlnp3wfhc2bu"]

[ext_resource type="Script" path="res://menus/character_creator.gd" id="1_t3vl0"]

[node name="character_creator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3vl0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="stats" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2i(280, 0)
offset_right = 280.0
offset_bottom = 720.0

[node name="name" type="VBoxContainer" parent="HBoxContainer/stats"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.249
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -193.5
offset_right = 155.0
offset_bottom = 193.5
grow_vertical = 2
theme_override_constants/separation = 50

[node name="name" type="VBoxContainer" parent="HBoxContainer/stats/name"]
offset_right = 233.0
offset_bottom = 61.0

[node name="label" type="Label" parent="HBoxContainer/stats/name/name"]
offset_right = 233.0
offset_bottom = 26.0
text = "Name"

[node name="name" type="LineEdit" parent="HBoxContainer/stats/name/name"]
unique_name_in_owner = true
offset_top = 30.0
offset_right = 233.0
offset_bottom = 61.0
max_length = 20

[node name="to_allocate" type="VBoxContainer" parent="HBoxContainer/stats/name"]
offset_top = 111.0
offset_right = 233.0
offset_bottom = 167.0

[node name="label" type="Label" parent="HBoxContainer/stats/name/to_allocate"]
offset_right = 233.0
offset_bottom = 26.0
text = "Remaining allocations"
horizontal_alignment = 1

[node name="to_allocate" type="Label" parent="HBoxContainer/stats/name/to_allocate"]
unique_name_in_owner = true
offset_top = 30.0
offset_right = 233.0
offset_bottom = 56.0
text = "1
"
horizontal_alignment = 1

[node name="stats" type="HBoxContainer" parent="HBoxContainer/stats/name"]
offset_top = 217.0
offset_right = 233.0
offset_bottom = 528.0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/stats/name/stats"]
offset_right = 233.0
offset_bottom = 311.0
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 9
columns = 4

[node name="health" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 2.0
offset_right = 101.0
offset_bottom = 28.0
text = "Health:
"

[node name="health_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 2.0
offset_right = 141.0
offset_bottom = 28.0
text = "1
"

[node name="health_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_right = 185.0
offset_bottom = 31.0
text = "-"

[node name="health_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_right = 233.0
offset_bottom = 31.0
text = "+"

[node name="stamina" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 42.0
offset_right = 101.0
offset_bottom = 68.0
text = "Stamina:
"

[node name="stamina_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 42.0
offset_right = 141.0
offset_bottom = 68.0
text = "1
"

[node name="stamina_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 40.0
offset_right = 185.0
offset_bottom = 71.0
text = "-"

[node name="stamina_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 40.0
offset_right = 233.0
offset_bottom = 71.0
text = "+"

[node name="mana" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 82.0
offset_right = 101.0
offset_bottom = 108.0
text = "Mana:
"

[node name="mana_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 82.0
offset_right = 141.0
offset_bottom = 108.0
text = "1
"

[node name="mana_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 80.0
offset_right = 185.0
offset_bottom = 111.0
text = "-"

[node name="mana_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 80.0
offset_right = 233.0
offset_bottom = 111.0
text = "+"

[node name="agility" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 122.0
offset_right = 101.0
offset_bottom = 148.0
text = "Agility:
"

[node name="agility_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 122.0
offset_right = 141.0
offset_bottom = 148.0
text = "1
"

[node name="agility_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 120.0
offset_right = 185.0
offset_bottom = 151.0
text = "-"

[node name="agility_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 120.0
offset_right = 233.0
offset_bottom = 151.0
text = "+"

[node name="constitution" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 162.0
offset_right = 101.0
offset_bottom = 188.0
text = "Constitution:
"

[node name="constitution_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 162.0
offset_right = 141.0
offset_bottom = 188.0
text = "1
"

[node name="constitution_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 160.0
offset_right = 185.0
offset_bottom = 191.0
text = "-"

[node name="constitution_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 160.0
offset_right = 233.0
offset_bottom = 191.0
text = "+"

[node name="strength" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 202.0
offset_right = 101.0
offset_bottom = 228.0
text = "Strength:
"

[node name="strength_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 202.0
offset_right = 141.0
offset_bottom = 228.0
text = "1
"

[node name="strength_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 200.0
offset_right = 185.0
offset_bottom = 231.0
text = "-"

[node name="strength_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 200.0
offset_right = 233.0
offset_bottom = 231.0
text = "+"

[node name="wisdom" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 242.0
offset_right = 101.0
offset_bottom = 268.0
text = "Wisdom:
"

[node name="wisdom_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 242.0
offset_right = 141.0
offset_bottom = 268.0
text = "1
"

[node name="wisdom_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 240.0
offset_right = 185.0
offset_bottom = 271.0
text = "-"

[node name="wisdom_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 240.0
offset_right = 233.0
offset_bottom = 271.0
text = "+"

[node name="luck" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_top = 282.0
offset_right = 101.0
offset_bottom = 308.0
text = "Luck:
"

[node name="luck_value" type="Label" parent="HBoxContainer/stats/name/stats/GridContainer"]
unique_name_in_owner = true
offset_left = 131.0
offset_top = 282.0
offset_right = 141.0
offset_bottom = 308.0
text = "1
"

[node name="luck_less" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 171.0
offset_top = 280.0
offset_right = 185.0
offset_bottom = 311.0
text = "-
"

[node name="luck_more" type="Button" parent="HBoxContainer/stats/name/stats/GridContainer"]
offset_left = 215.0
offset_top = 280.0
offset_right = 233.0
offset_bottom = 311.0
text = "+"

[node name="back" type="Button" parent="HBoxContainer/stats/name"]
offset_top = 578.0
offset_right = 233.0
offset_bottom = 609.0
text = "back"

[node name="style" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2i(280, 0)
offset_left = 284.0
offset_right = 996.0
offset_bottom = 720.0
size_flags_horizontal = 3

[node name="style2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2i(280, 0)
offset_left = 1000.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/style2"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -15.0
offset_right = -10.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 50

[node name="start" type="Button" parent="HBoxContainer/style2/VBoxContainer"]
offset_right = 240.0
offset_bottom = 31.0
size_flags_vertical = 8
text = "start
"
